# thesis_code

./: .gitignore  .pylintrc  README.md  collect_data.py  constants.py  cy_code.cp39-win_amd64.pyd  cy_code.pyx  data.xlsx  integrate_cy.c  integrate_cy.cp39-win_amd64.pyd  integrate_cy.pyx  integrate_py.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  testing.py  thesis_code.py  thesis_gui.py  transform_cy.c  transform_cy.pyx  transform_py.py
appendix/: 2 body analytic.docx  solve for orbital elements.docx
simulation/: __init__.py  cython_funcs.c  cython_funcs.pyx  integrate_cy.c  integrate_cy.pyx  integrate_py.py  numba_funcs.py  setup.py  sim_gui.py  simulation.py  transform_cy.c  transform_cy.pyx  transform_py.py
simulation/constants/: constants.py
simulation/simgui/: del_unused_dlls.bat  sim_gui.py
simulation/simulation/: descriptors.py  numba_funcs.py  profile_simulation.py  simulation.py  typing.py
simulation/typing/: typing.py
thesis/: collect_data.py
thesis/appendix/: solve for orbital elements (deprecated).docx
