[tool.poetry]
name = "thesis_code"
version = "1.0.0"
description = "Simulates orbits near Lagrange Points"
authors = ["Moussa Mikhail <moussamikhail56@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.2"
pyqtgraph = "^0.12.4"
PyQt5 = "^5.15.6"
numba = "^0.55.2"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
pylint = "^2.13.5"
flake8 = "^4.0.1"
flake8-comprehensions = "^3.8.0"
flake8-bugbear = "^22.3.23"
black = "^22.3.0"
XlsxWriter = "^3.0.3"
pyinstaller = "^5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
